spectec/test/elab/neg/type-extend-primitive.spectec
syntax extendPrimitive =
  | bool
  | FINT int
